--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.1",
     "@testing-library/user-event": "^12.5.0",
+    "accounting": "^0.4.1",
+    "firebase": "^9.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.1",
+    "react-state-provider": "^0.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
