--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
-    "@mui/styles": "^5.11.7",
+    "@mui/styles": "^5.11.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.1",
     "@testing-library/user-event": "^12.5.0",
@@ -15,6 +15,7 @@
     "firebase": "^9.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.43.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-state-provider": "^0.0.4",
