--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
     "@mui/styles": "^5.11.9",
+    "@stripe/react-stripe-js": "^1.16.5",
+    "@stripe/stripe-js": "^1.47.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.1",
     "@testing-library/user-event": "^12.5.0",
