--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@testing-library/react": "^12.1.1",
     "@testing-library/user-event": "^12.5.0",
     "accounting": "^0.4.1",
+    "axios": "^1.3.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase": "^9.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,6 +24,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-state-provider": "^0.0.4",
+    "stripe": "^11.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
